syntax = "proto3";

message ShopFurniturePurchaseData {
    bool success = 1;
}
